CruiseControl Release Notes - CVS

AntBootstrapper:
----------------------
* Submitted by Robert Smith

AntBuilder:
----------------------
* Changed command to run internal ant to use the -lib switch and only include ant-launcher.jar on the classpath.
  This should fix the error where optional tasks couldn't be found by Ant even though they where present on the classpath
* Added useQuiet attribute to call Ant using -quiet, which is mutually exclusive with useDebug
* Corrected documentation for uselogger and usedebug and added docs for usequiet
* Added saveLogDir attribute where a copy of the ant log will be saved. Patch by Jeremy Whitlock

AntBuilderTest:
----------------------
* Removed test for Ant 1.4 logfile containing invalid processing instruction, since it could fail the build with some XML Parsers.
  Changed it to test a valid xml log file as produced by Ant versions later than 1.4.x

AntPublisher:
----------------------
* Submitted by Robert Smith

buildresults.xsl:
----------------------
* Added consolidated xsl to make transform more efficent (CC-115). Patch by Alban Peignier with updates by Hack Kampbjorn

BuildStatus:
----------------------
* Modifications reported for BuildStatus will now be clickable and default username will now be "cc-" followed by the project name. Patch by Peter Buckner

contrib:
----------------------
* Added build.xml for XmlLoggerWithStatus, minor change to readme. Patch by Brad Clarke
* CruiseTray:  can change properties at runtime, refresh manually and make a config file to store settings. (And new icons!) Patch by Ali Eyertas
* Edit wrapper.template.conf for NtServiceWrapper to add javax.management.builder.initial property

CMSynergy:
----------------------
* Add support for CM Synergy as a sourcecontrol and bootstrapper. Patch by Robert Smith

cruisecontrol.sh:
----------------------
* Handle path conversion under cygwin. Patch by John Woodward

CVS:
----------------------